增加黑夜主题和正常主题切换，完成发现音乐页面展示

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,2 +1,5 @@
-$bgColor: var(--myBgColor ,#c20c0c);
-$fontColor: var(--myFontColor ,#000);
+$bgColor: var(--myBgColor ,#EC4141);
+$fontColor: var(--myFontColor ,#373737);
+$bodyColor: var(--myBodyColor, #fff);
+$themeColor: var(--mythemeColor, #2B2B2B);
+$hoverColor: var(--myhoverColor, #f5f5f5);
