播放器功能完成60%，完成页面的开发，目前实现点击音乐可播放

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -3,3 +3,4 @@ $fontColor: var(--myFontColor ,#373737);
 $bodyColor: var(--myBodyColor, #fff);
 $themeColor: var(--mythemeColor, #2B2B2B);
 $hoverColor: var(--myhoverColor, #f5f5f5);
+$playBgcColor: var(--myPlayBgcColor, #f6f6f8);
